# asr_resources_for_active_scene_recognition

./: .gitignore  CMakeLists.txt  License.txt  README.md  package.xml
launch/: control.launch  control.sh  real.launch  rviz_scene_exploration.launch  sim.launch  start_modules_real.sh  start_modules_scene_learning.sh  start_modules_sim.sh  start_modules_with_kinect.sh  start_recognizers.sh
launch/helpers/: configuration.py  control.py  general_ros.py  move.py  nbv.py  personal_stuff.py  start_modules_mock_robot.sh  start_modules_robot.sh  start_modules_sim_post_gazebo_components.sh  string_util.py  tmux.py
rviz_configurations/: scene_exploration.rviz
scene_recordings/: experiment_2_merge.sqlite  experiment_2_merge2.sqlite  experiment_2_part_1.sqlite  experiment_2_part_1_and_2.sqlite  experiment_2_symmetry_fix.sqlite  experiment_2_symmetry_fix_backup.sqlite  experiment_februar_SceneA.sqlite  experiment_februar_SceneAB.sqlite  experiment_februar_SceneAB_fixed.sqlite  experiment_februar_SceneA_fixed.sqlite  experiment_februar_SceneB.sqlite  experiment_februar_SceneB_Front.sqlite  experiment_initial_search_part_1.sqlite  experiment_initial_search_part_2.sqlite  experiment_smacks_coffeebox.sqlite  experiment_vitalis_knaeckebrot.sqlite  scene_25th_may.sqlite  sqlitebrowser experiment_2_merge2.sqlite  story_1.sqlite
scene_recordings/story_1/: gedeck_rotated_normalized_marker_3_hillclimbing_optimized_mild.sqlite  gedeck_schrank_2_rotated_normalized_map.sqlite
scene_recordings/story_2/: story_2.sqlite
src/: getFrustum.py
src/constellation_transformation_tool/: tranformation_tool.py  transformation_tool.py
src/recognition_manual_manager/: manager.py
