<?xml version="1.0"?>
<package>
  <name>asr_resources_for_active_scene_recognition</name>
  <version>1.0.0</version>
  <description>This package is the main entry point for Active Scene Recognition (ASR). It contains helpers and resources, including the launch files to start ASR in simulation or on the real mobile robot. Moreover, it includes a customized rviz-configuration file for ASR, databases of recorded scenes and tools which ease the interaction with the ASR system.</description>
  <author>Allgeyer Tobias, Aumann Florian, Borella Jocelyn, Karrenbauer Oliver, Marek Felix, Meißner Pascal, Stroh Daniel, Trautmann Jeremias</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>asr_next_best_view</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>asr_next_best_view</run_depend>
  <run_depend>asr_robot_model_services</run_depend>
  <run_depend>asr_flir_ptu_controller</run_depend>
  <run_depend>ptu_driver</run_depend>
  <run_depend>asr_world_model</run_depend>
  <run_depend>asr_next_best_view</run_depend>
  <run_depend>asr_recognizer_prediction_ism</run_depend>
  <run_depend>asr_resources_for_vision</run_depend>
  <run_depend>asr_kinematic_chain_mild</run_depend>
  <run_depend>asr_visualization_server</run_depend>
  <run_depend>asr_direct_search_manager</run_depend>
  <run_depend>asr_mild_navigation</run_depend>
  <run_depend>mild_base_launch_files</run_depend>
  <run_depend>asr_state_machine</run_depend>
  <run_depend>asr_aruco_marker_recognition</run_depend>
  <run_depend>asr_fake_object_recognition</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
